--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,19 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
+# lock files
+yarn.lock
+package-lock.json
+# ignore any lock file other than main lock file
+!/yarn.lock
+
+# starters are special; we want to persist the lock files
+!starters/*/package-lock.json
+
+.parcel-cache
+
+# IDE specific
+.idea/
+.vscode/
+*.sw*
