--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^5.13.3",
     "gatsby-plugin-disqus": "^1.2.6",
     "gatsby-plugin-feed": "^5.13.1",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
@@ -24,6 +25,7 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "prettier": "^2.8.8"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
