--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "simple-git": "^3.25.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
